--- a/week02/question/dom.html
+++ b/week02/question/dom.html
@@ -39,8 +39,9 @@
   <div class="content">
     <div class="disp" id="display">
       <form>
-        <p>1.페이지가 로딩 될 때 이곳의 글씨를 변경하시오.</p>
+        <p>1. 페이지가 로딩 될 때 이곳의 글씨를 변경하시오.</p>
       </form>
+
     </div>
 
     <p>2.탭을 선택하면 선택한 탭의 배경과 글자의색이 바뀌도록 하시오</p>
@@ -54,7 +55,6 @@
 
     <p>
       3. 위의 탭 클릭시 아래의 컨텐츠중 탭과 숫자가 같은 것만 보이게 하시오.
-    </p>
     <div class="tab_body">
       <div class="block">탭1 컨텐츠</div>
       <div class="block">탭3 컨텐츠</div>
@@ -62,7 +62,12 @@
       <div class="block">탭5 컨텐츠</div>
       <div class="block">탭4 컨텐츠</div>
     </div>
+
   </div>
 </body>
+
+<script>
+
+</script>
 
 </html>
